fix: adjust Button text alignment, fixes #516

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -105,8 +105,8 @@ governing permissions and limitations under the License.
   padding: var(--spectrum-button-padding-y) calc(var(--spectrum-button-primary-padding-x) - var(--spectrum-button-primary-border-size));
 
   /* @hack: fix button text vertical alignment at 14px */
-  padding-bottom: calc(var(--spectrum-button-padding-y) + 0.5px);
-  padding-top: calc(var(--spectrum-button-padding-y) - 0.5px);
+  padding-bottom: calc(var(--spectrum-button-padding-y) + 1px);
+  padding-top: calc(var(--spectrum-button-padding-y) - 1px);
 
   font-size: var(--spectrum-button-primary-text-size);
   font-weight: var(--spectrum-button-primary-text-font-weight);
